--- a/services/predict-model/streamlit/Dockerfile
+++ b/services/predict-model/streamlit/Dockerfile
@@ -17,4 +17,5 @@ COPY . .
 EXPOSE 8501
 
 # Commande pour lancer Streamlit
-CMD ["streamlit", "run", "streamlit.py"]
+CMD ["streamlit", "run", "streamlit.py", "--server.port=8501", "--server.address=0.0.0.0", "--server.baseUrlPath=/streamlit"]
+
