--- a/services/predict-model/k8s/streamlit-deployment.yaml
+++ b/services/predict-model/k8s/streamlit-deployment.yaml
@@ -14,12 +14,9 @@ spec:
     spec:
       containers:
       - name: streamlit-container
-        image: 131674823919.dkr.ecr.eu-west-3.amazonaws.com/dockerimage/streamlitcrypto:latest
+        # => Repo "streamlit-crypto"
+        image: 131674823919.dkr.ecr.eu-west-3.amazonaws.com/streamlit-crypto:latest
+
         ports:
           - containerPort: 8501
-
-        # Si besoin de variables d'env, tu peux en rajouter ici
-        # env:
-        #   - name: SOME_KEY
-        #     value: "SOME_VALUE"
 
