--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,78 +1,85 @@
+#############################################
+# .gitlab-ci.yml
+#############################################
 stages:
   - build
-  - push
+  - infra
   - deploy
 
-variables:
-  AWS_DEFAULT_REGION: "eu-west-1"
+# Variables : stocke la plupart dans l'UI GitLab > Settings > CI/CD > Variables
+# ex: $AWS_ACCESS_KEY_ID, $AWS_SECRET_ACCESS_KEY, $AWS_DEFAULT_REGION, ...
+# ex: $AWS_ECR_REGISTRY, $AWS_ECR_TOKEN (ou on fait un aws ecr get-login-password)
 
-before_script:
-  # Installer Helm, Docker CLI, et autres dépendances nécessaires
-  - apk add --no-cache curl jq python3 py3-pip docker-cli
-  - pip install --no-cache-dir awscli
-  # Se connecter à ECR (Docker registry sur AWS)
-  - aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin [your-aws-ecr-repo]
-
-# Build stage for extract-data
-build-extract-data:
+build-docker:
   stage: build
+  image: docker:20.10.16
+  services:
+    - docker:dind
+  variables:
+    DOCKER_HOST: "tcp://docker:2375/"
   script:
-    # Construire l'image Docker pour extract-data
-    - docker build -t [your-aws-ecr-repo]/extract-data:latest ./services/extract-data
+    # 1) Se connecter à ECR (ou DockerHub)
+    - aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin $AWS_ECR_REGISTRY
 
-# Push stage for extract-data
-push-extract-data:
-  stage: push
+    # 2) Build + push Django
+    - cd services/predict-model/Django
+    - docker build -t django-crypto:latest .
+    - docker tag django-crypto:latest $AWS_ECR_REGISTRY/dockerimage/djangocrypto:latest
+    - docker push $AWS_ECR_REGISTRY/dockerimage/djangocrypto:latest
+    - cd ../..
+
+    # 3) Build + push Streamlit
+    - cd services/predict-model/streamlit
+    - docker build -t streamlit-crypto:latest .
+    - docker tag streamlit-crypto:latest $AWS_ECR_REGISTRY/dockerimage/streamlitcrypto:latest
+    - docker push $AWS_ECR_REGISTRY/dockerimage/streamlitcrypto:latest
+    - cd ../..
+  only:
+    - main
+
+infra:
+  stage: infra
+  image: hashicorp/terraform:1.3.9
   script:
-    # Pousser l'image vers ECR pour extract-data
-    - docker push [your-aws-ecr-repo]/extract-data:latest
+    - cd services/predict-model/terraform
+    - terraform init
+    - terraform plan -out=tfplan
+    - terraform apply -auto-approve tfplan
+  artifacts:
+    paths:
+      - services/predict-model/terraform/terraform.tfstate
+    expire_in: 1 week
+  only:
+    - main
 
-# Deploy stage for extract-data
-deploy-extract-data:
+deploy:
   stage: deploy
+  image: bitnami/kubectl:latest
   script:
-    # Déployer les ressources Kubernetes avec Helm pour extract-data
-    - helm upgrade --install extract-data charts/extract-data --namespace data-processing
+    # 1) Configurer kubectl pour accéder au cluster. Ex:
+    #    aws eks update-kubeconfig --region $AWS_DEFAULT_REGION --name myekscrypto
+    - aws eks update-kubeconfig --region $AWS_DEFAULT_REGION --name myekscrypto
 
-# Build stage for train-model
-build-train-model:
-  stage: build
-  script:
-    # Construire l'image Docker pour train-model
-    - docker build -t [your-aws-ecr-repo]/train-model:latest ./services/train-model
+    # 2) On applique tous les manifests (Ingress, Deployments, Services, etc.)
+    - kubectl apply -f services/predict-model/k8s/
+    # L'Ingress est créé => un ALB va se créer
 
-# Push stage for train-model
-push-train-model:
-  stage: push
-  script:
-    # Pousser l'image vers ECR pour train-model
-    - docker push [your-aws-ecr-repo]/train-model:latest
+    # 3) Attendre un peu que l'ALB apparaisse
+    - echo "Waiting 30s for ALB..."
+    - sleep 30
 
-# Deploy stage for train-model
-deploy-train-model:
-  stage: deploy
-  script:
-    # Déployer les ressources Kubernetes avec Helm pour train-model
-    - helm upgrade --install train-model charts/train-model --namespace data-processing
+    # 4) Récupérer le DNS de l'ALB
+    - export ALB_DNS=$(kubectl get ingress crypto-ingress -o jsonpath='{.status.loadBalancer.ingress[0].hostname}')
+    - echo "ALB DNS is $ALB_DNS"
 
-# Build stage for predict-model
-build-predict-model:
-  stage: build
-  script:
-    # Construire l'image Docker pour predict-model
-    - docker build -t [your-aws-ecr-repo]/predict-model:latest ./services/predict-model
+    # 5) Mettre à jour la ConfigMap => STREAMLIT_URL
+    - sed -i "s|STREAMLIT_URL:.*|STREAMLIT_URL: \"http://$ALB_DNS/streamlit\"|g" services/predict-model/k8s/configmap.yaml
+    - kubectl apply -f services/predict-model/k8s/configmap.yaml
 
-# Push stage for predict-model
-push-predict-model:
-  stage: push
-  script:
-    # Pousser l'image vers ECR pour predict-model
-    - docker push [your-aws-ecr-repo]/predict-model:latest
-
-# Deploy stage for predict-model
-deploy-predict-model:
-  stage: deploy
-  script:
-    # Déployer les ressources Kubernetes avec Helm pour predict-model
-    - helm upgrade --install predict-model charts/predict-model --namespace data-processing
-
+    # 6) Redémarrer Django pour qu'il prenne la nouvelle env
+    - kubectl rollout restart deployment django-deployment
+    - kubectl get pods
+  dependencies:
+    - infra
+  only:
+    - main
