--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -73,7 +73,8 @@ deploy:
     - echo "ALB DNS is $ALB_DNS"
 
     - echo "=== Update ConfigMap with new STREAMLIT_URL ==="
-    - sed -i "s|STREAMLIT_URL:.*|STREAMLIT_URL: \"http://${ALB_DNS}/streamlit\"|g" services/predict-model/k8s/configmap.yaml
+    - sed -i 's|STREAMLIT_URL:.*|STREAMLIT_URL: "http://'"${ALB_DNS}"'/streamlit"|g' configmap.yaml
+
     - kubectl apply -f services/predict-model/k8s/configmap.yaml
 
     - echo "=== Restart Django deployment to reload env ==="
