--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -74,7 +74,7 @@ deploy:
 
     - echo "=== Update ConfigMap with new STREAMLIT_URL ==="
     # On met la commande SED entre simples quotes, et on insère la variable $ALB_DNS en la concaténant
-    - sed -i 's|STREAMLIT_URL:.*|STREAMLIT_URL: "http://'"$ALB_DNS"'/streamlit"|g' services/predict-model/k8s/configmap.yaml
+    - sed -i "s|STREAMLIT_URL:.*|STREAMLIT_URL: \\\"http://${ALB_DNS}/streamlit\\\"|g" services/predict-model/k8s/configmap.yaml
 
     - kubectl apply -f services/predict-model/k8s/configmap.yaml
 
