--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,6 +20,8 @@ build-docker:
   variables:
     DOCKER_HOST: "tcp://docker:2375/"
   script:
+    - apk update && apk add --no-cache python3 py3-pip
+    - pip install awscli
     - echo "=== Build & push Django container ==="
     - aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin $AWS_ECR_REGISTRY
 
