test cicd affiche variable

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,6 +20,8 @@ build-docker:
   variables:
     DOCKER_HOST: "tcp://docker:2375/"
   script:
+    - echo "AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID"
+    - echo "AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY"
     - apk update && apk add --no-cache python3 py3-pip
     - pip install awscli
     - echo "=== Build & push Django container ==="
