--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -47,11 +47,12 @@ infra:
   stage: infra
   image: hashicorp/terraform:1.3.9
   script:
-    - echo "=== Terraform init/plan/apply ==="
-    - cd services/predict-model/terraform
-    - terraform init
-    - terraform plan -out=tfplan
-    - terraform apply -auto-approve tfplan
+    - |
+      echo "=== Terraform init/plan/apply ==="
+      cd services/predict-model/terraform
+      terraform init
+      terraform plan -out=tfplan
+      terraform apply -auto-approve tfplan
   artifacts:
     paths:
       - services/predict-model/terraform/terraform.tfstate
