--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -45,7 +45,9 @@ stages:
 
 infra:
   stage: infra
-  image: hashicorp/terraform:1.3.9
+  image:
+    name: hashicorp/terraform:1.3.9
+    entrypoint: [""]
   script:
     - |
       echo "=== Terraform init/plan/apply ==="
