--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,3 @@
 # Ignorer le dossier /aws/ dans predict-model
 services/predict-model/aws/
-
-# (Optionnel) ignorer d'autres trucs
-# .idea/
-# *.pyc
-
+.gitlab-ci.build-deploy.yml
