--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,3 +1,22 @@
+stages:
+  - build-deploy
+  - infra
+
 include:
-  - local: '.gitlab-ci.infra.yml'
   - local: '.gitlab-ci.build-deploy.yml'
+  - local: '.gitlab-ci.infra.yml'
+stages:
+  - build-deploy
+  - infra
+
+include:
+  - local: '.gitlab-ci.build-deploy.yml'
+  - local: '.gitlab-ci.infra.yml'
+build_deploy_job:
+  stage: build-deploy
+  script:
+    - echo "Lancement du job build & deploy"
+  rules:
+    - if: '$CI_COMMIT_BRANCH == "main"'
+      when: always
+    - when: never
