--- a/.gitlab-ci.infra.yml
+++ b/.gitlab-ci.infra.yml
@@ -5,11 +5,11 @@
 infra:
   stage: infra
   image: hashicorp/terraform:1.3.9
+  entrypoint: [""]
   script:
     - echo "=== Terraform init/plan/apply for Infra ==="
     - cd services/predict-model/terraform
     - terraform init
-    - echo test1234
     - terraform plan -out=tfplan
     - terraform apply -auto-approve tfplan
     - echo "=== Terraform Outputs ==="
