--- a/.gitlab-ci.infra.yml
+++ b/.gitlab-ci.infra.yml
@@ -12,7 +12,8 @@ infra:
     - cd services/predict-model/terraform
     - terraform init
     - terraform plan -out=tfplan
-    - terraform apply tfplan || (echo "Apply failed, destroying..." && terraform destroy -auto-approve)
+#    - terraform apply tfplan || (echo "Apply failed, destroying..." && terraform destroy -auto-approve)
+    - terraform apply tfplan
     - echo "=== Terraform Outputs ==="
     - terraform output
   artifacts:
