--- a/.gitlab-ci.build-deploy.yml
+++ b/.gitlab-ci.build-deploy.yml
@@ -9,6 +9,8 @@ build-docker:
   variables:
     DOCKER_HOST: "tcp://docker:2375/"
   script:
+    - apk update && apk add --no-cache python3 py3-pip
+    - pip install awscli
     - echo "=== Build & push Django container ==="
     - aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username $AWS_ACCESS_KEY_ID --password-stdin $AWS_ECR_REGISTRY
     - cd services/predict-model/Django
