--- a/.gitlab-ci.build-deploy.yml
+++ b/.gitlab-ci.build-deploy.yml
@@ -32,6 +32,7 @@ deploy:
   image:
     name: bitnami/kubectl:latest
     entrypoint: [""]
+  user: root
   script:
     - apt-get update && apt-get install -y python3 python3-pip
     - python3 -m pip install awscli
