--- a/.gitlab-ci.build-deploy.yml
+++ b/.gitlab-ci.build-deploy.yml
@@ -30,9 +30,8 @@ build-docker:
 deploy:
   stage: deploy
   image:
-    name: bitnami/kubectl:latest
+    name: lachlanevenson/k8s-awscli:latest
     entrypoint: [""]
-  user: root
   script:
     - apt-get update && apt-get install -y python3 python3-pip
     - python3 -m pip install awscli
